Change tab title to match.
Part of #3.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		</style>
 	</head>
 	<body>
-		<my-app appTitle="Prompt Garden Editor"></my-app>
+		<my-app appTitle="Code Sprout"></my-app>
 		<noscript>
 			Please enable JavaScript to view this website.
 		</noscript>
