Update name of viewer in a couple of places it wasn't updated yet.
Part of #3.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
 		<!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
 		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="application-name" content="Adjacency Map">
+		<meta name="application-name" content="Code Sprout">
 
 		<!-- Add to homescreen for Safari on iOS -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="default">
-		<meta name="apple-mobile-web-app-title" content="Adjacency Map">
+		<meta name="apple-mobile-web-app-title" content="Code Sprout">
 
 		<!-- Homescreen icons -->
 		<link rel="apple-touch-icon" href="images/manifest/icon-48x48.png">
@@ -51,7 +51,7 @@
 		<!-- Default twitter cards -->
 		<meta name="twitter:card" content="summary">
 		<meta property="og:type" content="website">
-		<meta property="og:site_name" content="Adjacency Map">
+		<meta property="og:site_name" content="Code Sprout">
 		<meta property="og:image" content="images/manifest/icon-144x144.png" />
 
 		<!-- Performance tip: hint to the browser to start the handshake for the fonts site -->
