github fork banner hides for smaller screens.
Part of #15.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
 				min-height: 100vh;
 				-webkit-font-smoothing: antialiased;
 			}
+
+			@media screen and (max-width: 700px) {
+				.github-fork-ribbon {
+					display: none;
+				}
+			}
+
 		</style>
 	</head>
 	<body>
