Clean up application title.
Part of #3.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		</style>
 	</head>
 	<body>
-		<my-app appTitle="Code Sprout"></my-app>
+		<my-app appTitle="Code Sprouts"></my-app>
 		<noscript>
 			Please enable JavaScript to view this website.
 		</noscript>
